# makedoc

./: Makefile.am  README.markdown  autogen.sh  configure.ac  configure.ac.stub  fop-config.xml.in
fonts/: Makefile.am
images/: Makefile.am
stylesheets/: Makefile.am  Makefile.in  fo.xsl.in
stylesheets/fo/: Makefile.am  profile-docbook.xsl.in
work/: Makefile.am
